# android_ncnn_mobilenet_classification

./: README.md
ncnn_mobileNet/app/: CMakeLists.txt  build.gradle
ncnn_mobileNet/app/src/androidTest/java/com/nanamare/mac/mobilenet/: ExampleInstrumentedTest.java
ncnn_mobileNet/app/src/main/: AndroidManifest.xml
ncnn_mobileNet/app/src/main/cpp/: mobilenet.id.h  native-lib.cpp
ncnn_mobileNet/app/src/main/java/com/nanamare/mac/mobilenet/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  ImageUtils.java  Logger.java  MainActivity.java  MobileNetNCNN.java
ncnn_mobileNet/app/src/main/res/layout/: activity_main.xml  camera_fragment.xml
ncnn_mobileNet/app/src/main/res/values/: strings.xml  styles.xml
ncnn_mobileNet/app/src/test/java/com/nanamare/mac/mobilenet/: ExampleUnitTest.java
ncnn_mobileNet/gradle/wrapper/: gradle-wrapper.properties
